Fixed minor bug on mobile devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -96,7 +96,6 @@ a:hover, a:active {
 
 main {
   width: 100%;
-  height: 100vh;
   background-image: url("../assets/bg.jpg");
   background-position: center;
   background-size: cover;
@@ -111,7 +110,7 @@ footer {
 }
 
 .flex-container {
-  padding: 0 1em;
+  padding: 2em 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -223,6 +222,9 @@ footer {
 }
 
 @media only screen and (min-width: 768px) {
+  main {
+    height: 100vh;
+  }
   .current-weather {
         grid-template-areas: 'sol sol wind' 'temperature pressure wind';
   }
