--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,6 +1,5 @@
 main {
 	width: 100%;
-	height: 100vh;
 	background-image: url('../assets/bg.jpg');
 	background-position: center;
 	background-size: cover;
@@ -15,7 +14,7 @@ footer {
 }
 
 .flex-container {
-	padding: 0 1em;
+	padding: 2em 1em;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -93,6 +92,10 @@ footer {
 }
 
 @media only screen and (min-width: 768px) {
+	main {
+		height: 100vh;
+	}
+
 	.current-weather {
 		grid-template-areas:
 			'sol sol wind'
